poprawki w bazie danych, uruchamianie wielu ekranów, poprawki w znacznikach statusu i widoczności, poprawki w heartbeat.
