# backend/src/entities/screen-state.entity.ts
@@ -6,13 +6,17 @@ import {
   OneToOne,
   JoinColumn,
   ManyToOne,
+  RelationId,
 } from 'typeorm';
 import { ScreenEntity } from './screen.entity';
 import { PlaylistEntity } from './playlist.entity';
 
 @Entity('screen_state')
 export class ScreenStateEntity {
-  @PrimaryColumn({ type: 'int' })
+  @PrimaryColumn({
+    name: 'screen_id',
+    type: 'int',
+  })
   screenId: number;
 
   @Column({ type: 'timestamp', nullable: true })
@@ -21,11 +25,11 @@ export class ScreenStateEntity {
   @Column({ type: 'varchar', length: 255, nullable: true })
   lastPlaylistHash: string | null;
 
-  @Column({ type: 'int', nullable: true })
-  currentPlaylistId: number | null;
-
   @Column({ type: 'int', default: 0 })
   currentIndex: number;
+
+  @Column({ type: 'boolean', default: true })
+  visible: boolean;
 
   @UpdateDateColumn()
   updatedAt: Date;
@@ -37,9 +41,12 @@ export class ScreenStateEntity {
   screen: ScreenEntity;
 
   @ManyToOne(() => PlaylistEntity, playlist => playlist.screenStates, {
-    onDelete: 'SET NULL',
-    nullable: true,
+  onDelete: 'SET NULL',
+  nullable: true,
   })
   @JoinColumn({ name: 'current_playlist_id' })
   currentPlaylist: PlaylistEntity | null;
-}
+
+  @RelationId((state: ScreenStateEntity) => state.currentPlaylist)
+  currentPlaylistId: number | null;
+  }
